# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../tools/impeller.gni")

impeller_component("wsi") {
  sources = [
    "playground_window.cc",
    "playground_window.h",
    "playground_wsi.cc",
    "playground_wsi.h",
  ]

  sources += [
    "glfw/playground_window_glfw.cc",
    "glfw/playground_window_glfw.h",
    "glfw/playground_wsi_glfw.cc",
    "glfw/playground_wsi_glfw.h",
  ]

  deps = [
    "../../renderer",
    "//flutter/fml",
    "//third_party/glfw",
    "//third_party/imgui:imgui_glfw",
  ]
}
